pipeline/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
spec:
  ingressClassName: "nginx"
  rules:
    - host: process.k8s
      http:
        paths:
          - pathType: Prefix
            path: /k
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8088
    - host: process.k8s
      http:
        paths:
          - pathType: Prefix
            path: /s
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
#    - host: process.k8s
#      http:
#        paths:
#          - pathType: Prefix
#            path: /
#            backend:
#              service:
#                name: keycloak-service
#                port:
#                  number: 80
